--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1238,8 +1238,9 @@ header{
 #payroll-nav .nav-link:hover svg path{
     fill: var(--red-color);
 }
-#payroll-nav svg{
+#payroll-nav i{
     margin-right: 15px;
+    font-size: 20px;
 }
 #payroll-nav .nav-link.active{
     color: var(--red-color);
@@ -1603,7 +1604,7 @@ header{
     font-size: 14px;
     line-height: 20px;
     color: #212121;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 .personal__details--container p{
     margin-bottom: 7px;
@@ -1697,9 +1698,24 @@ header{
     font-size: 14px;
     line-height: 20px;
     color: #FFFFFF;
+    white-space: nowrap;
 }
 .btn__sync{
     padding: 12px 16px;
+    background: #FFFFFF;
+    border-radius: 4px;
+    border: 1px solid var(--red-color);
+    text-align: center;
+
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #F16532;
+}
+.btn__edit{
+    padding: 9px 26px;
     background: #FFFFFF;
     border-radius: 4px;
     border: 1px solid var(--red-color);
@@ -1742,7 +1758,8 @@ header{
     letter-spacing: 0.03em;
     color: #FFC107;
 }
-#write-note > div{
+#write-note > div,
+#hr-document > div{
     max-width: 562px;
 }
 .write__note--container{
@@ -1798,4 +1815,241 @@ header{
 }
 body > div.content-container > div.container-layout > div.payroll__search--container > div > div.col-lg-5.col-md-12.col-12.mt-lg-0.mt-sm-4 > div > div:nth-child(3) > div > svg{
     margin-right: 16px;
+}
+.details__top--right{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 16px 0 16px;
+}
+.details__top--right h3{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #212121;
+    margin-bottom: 15px;
+    padding: 0;
+}
+.employee__content--container{
+    padding: 20px 16px;
+}
+.employee__contact--top{
+    padding: 22px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+#employee-content > div:nth-child(1) > div.employee__content--container > div.employee__contact--top > div{
+    margin-right: 24px;
+    display: flex;
+    align-items: center;
+}
+#employee-content > div:nth-child(1) > div.employee__content--container > div.employee__contact--top > div > span{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #757575;
+    margin-left: 10px;
+}
+#employee-content > div:nth-child(1) > div.employee__content--container > div.employee__contact--top > div:nth-child(1) > i{
+    font-size: 24px;
+    color: #757575;
+}
+#employee-content > div:nth-child(1) > div.employee__content--container > div.employee__contact--top > div:nth-child(2) > i{
+    font-size: 20px;
+    color: #757575;
+}
+.employee__profile--img{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+}
+.upload__employee--img{
+    margin-left: 32px;
+}
+#employee-content > div:nth-child(1) > div.employee__content--container > div.employee__profile--img > div > div{
+    padding: 10px 16px;
+    border: 1px solid #F16532;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+}
+#employee-content > div:nth-child(1) > div.employee__content--container > div.employee__profile--img > div > div > i{
+    color: var(--red-color);
+    font-size: 24px;
+}
+#employee-content > div:nth-child(1) > div.employee__content--container > div.employee__profile--img > div > div > span{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #F16532;
+    margin-left: 20px;
+}
+.alert__img{
+    display: flex;
+    align-items: center;
+    margin-top: 7px;
+}
+.alert__img i{
+    color: #9E9E9E;
+    font-size: 14px;
+}
+.alert__img span{
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    color: #9E9E9E;
+    margin-left: 5px;
+}
+#employee-content > div:nth-child(2) > div.employee__content--container > div > div.col-lg-5.col-md-5.col-12 > div > div{
+    margin-top: 92px;
+}
+#employee-content > div > div.employee__content--container > table > thead > tr > th:nth-child(1),
+#collapseOne > div > table > thead > tr > th:nth-child(1),
+#collapseOne2 > div > table > thead > tr th:nth-child(1){
+    width: 70%;
+}
+
+#employee-content > div > div.employee__content--container > table > thead > tr > th,
+#collapseOne > div > table > thead > tr > th,
+#collapseOne2 > div > table > thead > tr > th,
+#notes-content > div > div > table > thead > tr > th{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    color: #212121;
+}
+#employee-content > div > div.employee__content--container > table > tbody > tr > td,
+#collapseOne > div > table > tbody > tr > td,
+#collapseOne2 > div > table > tbody > tr > td,
+#notes-content > div > div > table > thead > tr > td{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    color: #212121;
+    vertical-align: middle;
+}
+#employee-content > div:nth-child(3) > div.employee__content--container > table > tbody > tr > td:nth-child(3) > span{
+    font-family: auto;
+}
+.complete__tick{
+    padding: 12px 17px;
+    width: 29px;
+    height: 20px;
+    background: #B9F6CA;
+    border-radius: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.complete__tick i{
+    background: #00C853;
+    color: #ffffff;
+    border-radius: 50%;
+    padding: 2px;
+}
+.cross_check{
+    padding: 12px 17px;
+    width: 29px;
+    height: 20px;
+    background: #FFF8E1;
+    border-radius: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.cross_check i{
+    background: #FFC107;
+    color: #ffffff;
+    border-radius: 50%;
+    padding: 2px;
+}
+.details__container .accordion-item:first-of-type .accordion-button{
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    background-color: transparent;
+}
+.details__container .accordion-button:not(.collapsed){
+    color: initial;
+    background-color: transparent;
+     box-shadow: none;
+}
+.details__container .accordion-item{
+    background-color: transparent;
+    border: none;
+}
+#collapseOne > div > table > tbody > tr > td:nth-child(1) > p,
+#collapseOne2 > div > table > tbody > tr > td:nth-child(1) > p{
+    width: 400px;
+}
+#collapseOne > div > table > tbody > tr:nth-child(1),
+#collapseOne > div > table > thead > tr,
+#collapseOne2 > div > table > tbody > tr:nth-child(1),
+#collapseOne2 > div > table > thead > tr{
+    width: 100%;
+    border-bottom: 1px solid #F6ECE1;
+    margin-top: 11px;
+}
+.table>:not(caption)>*>*{
+    padding: 0.5rem 0;
+}
+.dropzone{
+    margin-top: 30px;
+    padding: 14px 16px;
+    width: 474px;
+    height: 132px;background: #FFFFFF;
+    border: 1px dashed rgba(0, 0, 0, 0.23);
+    border-radius: 12px;
+    margin-bottom: 30px;
+}
+.dropzone p{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #616161;
+}
+.dropzone i{
+    color: #F16532;
+    margin-top: 16px;
+    font-size: 40px;
+    transform: rotate(-136deg);
+}
+.attachment__container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#hr-document > div > div > div.modal-body.m-0.p-0 > div > div.attachment__container > div:nth-child(1) > i{
+    color: var(--red-color);
+    font-size: 20px;
+    margin-right: 11px;
+}
+#hr-document > div > div > div.modal-body.m-0.p-0 > div > div.attachment__container > div:nth-child(1) > span{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #212121;
+}
+#hr-document > div > div > div.modal-body.m-0.p-0 > div > div.attachment__container > div:nth-child(2) > i{
+    color: var(--red-color);
+    font-size: 20px;
 }
