--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -309,7 +309,7 @@ header{
 }
 .dropdown__menu--items ul{
     padding: 0;
-    margin-left: 22px;
+    margin-left: 12px;
 }
 .dropdown__menu--item::before{
     content: '';
@@ -324,6 +324,7 @@ header{
     justify-content: left;
     cursor: pointer;
     margin-top: 20px;
+    padding: 0 12px;
 }
 .dropdown__menu--item span a{
     font-family: 'Qanelas';
@@ -1440,13 +1441,26 @@ header{
     justify-content: center;
 }
 .action__btn{
-    padding: 12px;
+    padding: 12px 16px;
     border: 1px solid #F16532;
     border-radius: 4px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.action__btn:hover{
+    background-color: var(--red-color);
 }
 .action__btn svg{
     background: #FBD1C2;
+}
+.action__btn i{
+    color: var(--red-color);
+    font-size: 20px;
+}
+.action__btn:hover i{
+    color: #ffffff;
 }
 #all-payroll > table > tbody > tr > td.d-flex > span:nth-child(2),
 #pending-payroll> table > tbody > tr > td.d-flex > span:nth-child(2),
@@ -1517,6 +1531,10 @@ header{
     display: flex;
     align-items: center;
     display: none;
+}
+.visa__status--container{
+    left: -29px;
+    top: 55px;
 }
 .payroll__sync--container ul,
 .invitation__recent--container ul{
@@ -1700,6 +1718,9 @@ header{
     color: #FFFFFF;
     white-space: nowrap;
 }
+.btn__jobs i{
+    margin-right: 16px;
+}
 .btn__sync{
     padding: 12px 16px;
     background: #FFFFFF;
@@ -1713,6 +1734,9 @@ header{
     font-size: 14px;
     line-height: 20px;
     color: #F16532;
+}
+.btn__sync i{
+    margin-right: 16px;
 }
 .btn__edit{
     padding: 9px 26px;
@@ -1745,7 +1769,8 @@ header{
 }
 .validation__pending{
     padding: 4px 8px;
-    width: 95px;
+    min-width: 95px;
+    width: fit-content;
     height: 24px;
     background: #FFF8E1;
     border-radius: 100px;
@@ -1757,6 +1782,36 @@ header{
     line-height: 16px;
     letter-spacing: 0.03em;
     color: #FFC107;
+}
+.validation__expired{
+    padding: 4px 8px;
+    width: 95px;
+    height: 24px;
+    background: #FBE9E7;
+    border-radius: 100px;
+
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    color: #D84315;
+}
+.validation__na{
+    padding: 4px 8px;
+    width: 95px;
+    height: 24px;
+    background: #F5F5F5;
+    border-radius: 100px;
+
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    color: #9E9E9E;
 }
 #write-note > div,
 #hr-document > div{
@@ -2052,4 +2107,11 @@ body > div.content-container > div.container-layout > div.payroll__search--conta
 #hr-document > div > div > div.modal-body.m-0.p-0 > div > div.attachment__container > div:nth-child(2) > i{
     color: var(--red-color);
     font-size: 20px;
+}
+#dropdownMenu > ul > li.dropdown__menu--item.sidebar__active{
+    padding: 12px;
+}
+#all-payroll > table > tbody > tr:nth-child(1) > td.d-flex.position-relative > div{
+    left: -16px;
+    top: 58px;
 }
