--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1130,6 +1130,11 @@ header{
     border: none;
     box-shadow: 0px 25px 50px rgb(0 0 0 / 25%);
 }
+.chart__top--right select{
+    border: none;
+    background: transparent;
+    outline: none;
+}
 .chart__bar{
     padding: 24px 16px;
     margin-bottom: 36px;
@@ -1397,7 +1402,7 @@ header{
     cursor: pointer;
 }
 
-#all-payroll > table > thead > tr > th:nth-child(1) > input,
+/*#all-payroll > table > thead > tr > th:nth-child(1) > input,
 #all-payroll > table > tbody > tr > td:nth-child(1) > input,
 #pending-payroll > table > thead > tr > th:nth-child(1) > input,
 #pending-payroll > table > tbody > tr > td:nth-child(1) > input,
@@ -1438,7 +1443,7 @@ header{
     border: solid #0079bf;
     border-width: 0 2px 2px 0;
     transform: rotate(45deg);
-}
+}*/
 .detail__edited{
     padding: 4px 10px;
     background: #FBE9E7;
@@ -1478,21 +1483,21 @@ header{
 #uploaded-payroll> table > tbody > tr > td.d-flex > span:nth-child(2){
     padding: 12px 14px;
 }
-#all-payroll > table > thead > tr > th > input[type=checkbox],
-#all-payroll > table > tbody > tr > td > input[type=checkbox],
-#pending-payroll > table > thead > tr > th > input[type=checkbox],
-#pending-payroll > table > tbody > tr > td > input[type=checkbox],
-#uploaded-payroll > table > thead > tr > th > input[type=checkbox],
-#uploaded-payroll > table > tbody > tr > td > input[type=checkbox]{
-    width: 17px;
-    height: 17px;
-}
-#all-payroll > table > thead,
-#pending-payroll > table > thead,
-#uploaded-payroll > table > thead{
-    position: relative;
-    bottom: 20px;
-}
+/*#all-payroll > table > thead > tr > th > input[type=checkbox],*/
+/*#all-payroll > table > tbody > tr > td > input[type=checkbox],*/
+/*#pending-payroll > table > thead > tr > th > input[type=checkbox],*/
+/*#pending-payroll > table > tbody > tr > td > input[type=checkbox],*/
+/*#uploaded-payroll > table > thead > tr > th > input[type=checkbox],*/
+/*#uploaded-payroll > table > tbody > tr > td > input[type=checkbox]{*/
+/*    width: 17px;*/
+/*    height: 17px;*/
+/*}*/
+/*#all-payroll > table > thead,*/
+/*#pending-payroll > table > thead,*/
+/*#uploaded-payroll > table > thead{*/
+/*    position: relative;*/
+/*    bottom: 20px;*/
+/*}*/
 
 .bottom__pagination--container{
     margin-top: 31px;
@@ -1871,7 +1876,7 @@ header{
 }
 .progress__bar--container progress {
     height: 4px;
-    background: var(--red-color);
+    background: #F16532;
 }
 .progress__bar--container progress::-moz-progress-bar {
     background: black;
@@ -2183,7 +2188,12 @@ body > div.content-container > div > div.new__listing > div > div:nth-child(7) >
     width: 474px;
 }
 .publish__job label{
-    padding-top: 19px;
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #212121;
 }
 body > div.content-container > div > div.new__listing > div.listing__submit > div > button.save__btn > span{
     font-family: auto;
@@ -2225,6 +2235,9 @@ body > div.content-container > div > div.new__listing > div.listing__submit > di
     text-decoration: underline;
     color: #212121;
 }
+.filter__checkbox{
+    margin-top: 20px;
+}
 .filter__group label{
     font-family: 'Qanelas';
     font-style: normal;
@@ -2232,5 +2245,78 @@ body > div.content-container > div > div.new__listing > div.listing__submit > di
     font-size: 12px;
     line-height: 14px;
     color: #212121;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
 }
+
+/*Input Checkbox Start*/
+/* The container */
+.checkbox__container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.checkbox__container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background: #F5F5F5;
+
+    border: 1px solid #EDE7F6;
+    border-radius: 6px;
+
+}
+
+/* When the checkbox is checked, add a blue background */
+input:checked ~ .checkmark {
+    background-color: var(--red-color);
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.filter__checkbox > .filter__group > label > span{
+    margin-top: -7px;
+}
+/*Input Checkbox End*/
