--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -584,6 +584,26 @@ header{
     cursor: pointer;
     text-decoration: none;
 }
+.forget__pass--container.d-flex.justify-content-between > div > label{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #212121;
+}
+.forget__pass--container.d-flex.justify-content-between > div > label > span{
+    height: 18px;
+    width: 18px;
+}
+.forget__pass--container.d-flex.justify-content-between > div > label{
+    padding-left: 30px;
+}
+.forget__pass--container.d-flex.justify-content-between > div > label > span.checkmark::after{
+    contain: '';
+    left: 6px;
+    top: 3px;
+}
 .sign__in--btn{
     padding: 12px 16px;
     width: 100%;
@@ -2396,15 +2416,15 @@ input:checked ~ .checkmark:after {
 }
 .chat__inner--layout{
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: start;
+    height: 100%;
 }
 .left__chathead--container{
-    width: 251px;
+    width: 100%;
     height: 100%;
+    min-height: 100vh;
     padding: 16px;
-    background: #FAFAFA;border: 1px solid #F5F5F5;
+    background: #FAFAFA;
+    border: 1px solid #F5F5F5;
     border-radius: 4px;
 }
 .chat__border--bottom{
@@ -2512,4 +2532,311 @@ input::placeholder{
 }
 .payroll__search--container > div > div.col-lg-2.col-md-12.col-12.mt-lg-0.mt-sm-4 > div > div > a{
     text-decoration: none;
+}
+.each__chat--head{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 7px;
+}
+.each__chat--head:not(:last-child){
+    margin-bottom: 12px;
+}
+.chat__head--name{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;color: #757575;
+}
+.chat__head--msg{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 16px;
+    letter-spacing: 0.03em;color: #9E9E9E;
+}
+.chat__head--count{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    color: #F16532;
+    margin-bottom: 6px;
+}
+.chat__head--timed{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 16px;
+    text-align: right;
+    letter-spacing: 0.03em;
+    color: #9E9E9E;
+}
+.active__chat--head{
+    background: #F6ECE1;
+    border-radius: 6px;
+}
+.center__message--container{
+    width: 100%;
+    height: 100%;
+    background: #FAFAFA;
+    border: 1px solid #F5F5F5;
+    border-radius: 4px;
+    padding: 20px;
+}
+.message__container--header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.message__header--profile{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+.message__header--profile svg path{
+    fill: #757575;
+}
+.message__header--profile img{
+    margin-left: 14px;
+}
+.message__header--profile label{
+    margin-left: 8px;
+    margin-right: 8px;
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: #757575;
+}
+.message__header--profile label::after{
+    content: 'Last seen 2h ago';
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 20px;
+    color: #757575;
+    display: inherit;
+}
+.active__status-circle{
+    width: 8px;
+    height: 8px;
+    margin-top: -17px;
+    border-radius: 50%;
+    border: 1px solid #9E9E9E;
+}
+.chat__two{
+    margin-top: 2px !important;
+}
+.chat__label::after{
+    display: none !important;
+}
+.message__header--action{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.message__header--action svg path{
+
+}
+.message__header--action i{
+    font-size: 19px;
+    color: #9E9E9E;
+    margin-left: 18px;
+    cursor: pointer;
+}
+.message__header--action i:active{
+    color: var(--red-color);
+}
+.message__container--messages{
+    margin-top: 24px;
+}
+.each__message--d{
+    padding: 16px;
+    border-radius: 12px;
+    margin-bottom: 24px;
+}
+.each__message--d p:first-child{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 20px;
+    color: #212121;
+    margin: 0;
+}
+.each__message--d p:nth-child(2){
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 16px;
+    text-align: right;
+    letter-spacing: 0.03em;
+    color: #9E9E9E;
+    margin: 4px 0 0 0;
+}
+.left__message{
+    background: #F6ECE1;
+    width: 380px;
+}
+.right__message{
+    background: #ffffff;
+    width: 380px;
+    margin-left: calc(100% - 380px);
+}
+.message__send--container{
+    margin-top: 24px;
+    padding: 12px;
+    background: #FFFFFF;
+    border-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.message__input{
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+.message__input svg{
+    color: #9E9E9E;
+    margin-right: 14px;
+}
+.message__input input{
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+}
+.message__input input::placeholder{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 20px;
+    color: #9E9E9E;
+}
+.message__send--border{
+    border-right: 1px solid #E3F2FD;
+    height: 100%;
+    margin-right: 12px;
+}
+.message__send svg{
+    transform: rotate(42deg);
+}
+.right__user--profile{
+    border-radius: 12px;
+}
+.user__profile--thumb{
+    width: 100%;
+    background: #FAFAFA;
+    padding: 26px 20px;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 12px;
+    margin-bottom: 20px;
+}
+.user__profile--thumb h2{
+    margin-top: 21px;
+    margin-bottom: 1px;
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    color: #212121;
+}
+.user__profile--thumb h3{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #757575;
+}
+.user__profile--info{
+    background: #FAFAFA;
+    border: 1px solid #F5F5F5;
+    border-radius: 12px;
+    padding: 24px 16px 16px 16px;
+}
+.user__profile--info h4{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #212121;
+    margin-bottom: 13px;
+}
+.user__profile--info p{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    color: #757575;
+    margin-bottom: 14px;
+}
+.user__profile--info p svg{
+    margin-right: 10px;
+}
+.chat__profile{
+    transition: all 0.3s ease-in-out;
+}
+.profile__toggle{
+    transform: translateX(110%);
+    display: none;
+    transition: all 0.3s ease-in-out;
+}
+.message__width{
+    width: 75% !important;
+    transition: all 0.3s ease-in-out;
+}
+.message__main{
+    transition: all 0.3s ease-in-out;
+}
+#profileToggle{
+    cursor: pointer;
+}
+.message__popup{
+    padding: 15px 15px 15px 10px;
+    position: absolute;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    min-width: 151px;
+    right: 0;
+    top: 18px;
+}
+.message__popup p{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    display: flex;
+    align-items: center;
+    color: #212121;
+}
+.message__popup p:not(:last-child){
+    margin-bottom: 21px;
+}
+.message__popup svg{
+    margin-right: 16px;
+}
+.message__action--toggle{
+    display: none;
+    pointer-events:none
 }
