--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1286,13 +1286,16 @@ header{
 /*    font-size: 20px;*/
 /*}*/
 #payroll-nav .nav-link.active{
-    /*color: var(--red-color);*/
+    color: var(--red-color);
 }
 #payroll-nav .nav-link.active svg path{
     /*fill: var(--red-color);*/
 }
 .content-container > div > div.payroll__search--container > div > div.col-lg-7.col-md-12.col-12 > div > div.col-lg-2.col-md-2.col-2.p-0 > button > svg{
     margin-right: 14px;
+}
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
+    background: transparent;
 }
 #payroll-nav .nav-link::after{
     content: '';
@@ -1310,7 +1313,7 @@ header{
     background: var(--red-color);
     height: 2px;
     position: relative;
-    top: 9px;
+    top: 8px;
 }
 .payroll__search--container{
     background: #FFFFFF;
@@ -1631,7 +1634,7 @@ header{
     font-weight: 600;
     font-size: 16px;
     line-height: 24px;
-    color: #FFFFFF;
+    color: #FFFFFF !important;
     text-decoration: none;
 }
 .c-border{
@@ -2566,6 +2569,7 @@ input::placeholder{
     letter-spacing: 0.03em;
     color: #F16532;
     margin-bottom: 6px;
+    text-align: right;
 }
 .chat__head--timed{
     font-family: 'Qanelas';
