--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -198,15 +198,13 @@ header{
     margin-right: 10px;
 }
 .log__out--menu{
-    font-size: 16px !important;
     line-height: 28px !important;
-    display: flex;
-    align-items: center;
-    color: #FF5E5E !important;
-    justify-content: center;
-    background: rgba(255, 1, 1, 0.1);
-    border-radius: 5px;
-    padding: 10px 34px;
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #333333;
 }
 .log__out--menu a{
     text-decoration: none;
@@ -535,7 +533,7 @@ header{
     font-size: 16px;
     line-height: 24px;
     color: #616161;
-    margin-bottom: 20px;
+    margin-bottom: 16px;
 }
 .signup__content--container h3{
     font-family: 'Qanelas';
@@ -615,6 +613,23 @@ header{
     outline: none;
 
 
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #FFFFFF;
+    margin-bottom: 24px;
+}
+
+.forget__send--btn{
+    padding: 12px 16px;
+    width: 100%;
+    height: 44px;
+    background: #F16532;
+    border-radius: 4px;
+    border: none;
+    outline: none;
     font-family: 'Qanelas';
     font-style: normal;
     font-weight: 500;
@@ -1137,9 +1152,10 @@ header{
 }
 .chart__top--right{
     background: #FAFAFA;
-    border: 1px solid #F5F5F5;
+    border: 1px solid var(--red-color);
     border-radius: 12px;
     padding: 13px;
+    color: var(--red-color);
 }
 .chart__top--right svg{
     position: absolute;
@@ -1431,7 +1447,7 @@ header{
 #all-payroll > table > tbody > tr > td:nth-child(8),
 #pending-payroll > table > tbody > tr > td:nth-child(8),
 #uploaded-payroll > table > tbody > tr > td:nth-child(8){
-    color: #21212194;
+    /*color: #21212194;*/
 }
 
 /*Custom checkbox*/
@@ -1949,7 +1965,7 @@ progress::-webkit-progress-bar {
     background: #F6ECE1;
 }
 body > div.content-container > div.container-layout > div.payroll__search--container > div > div.col-lg-5.col-md-12.col-12.mt-lg-0.mt-sm-4 > div > div:nth-child(3) > div > svg{
-    margin-right: 16px;
+    /*margin-right: 16px;*/
 }
 .details__top--right{
     display: flex;
@@ -2339,15 +2355,13 @@ body > div.content-container > div > div.new__listing > div > div:nth-child(7) >
     height: 25px;
     width: 25px;
     background: #F5F5F5;
-
     border: 1px solid #EDE7F6;
     border-radius: 6px;
-
 }
 
 /* When the checkbox is checked, add a blue background */
 input:checked ~ .checkmark {
-    background-color: var(--red-color);
+    background-color: var(--red-color) !important;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
@@ -2388,6 +2402,17 @@ input:checked ~ .checkmark:after {
     width: 18px;
     height: 18px;
     margin-top: -3px;
+}
+
+.filter__checkbox .filter__group .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background: #F5F5F5;
+    border: 1px solid #F6ECE1;
+    border-radius: 2px;
 }
 /*Input Checkbox End*/
 
@@ -2492,7 +2517,8 @@ input:checked ~ .checkmark:after {
 
 /* When the radio button is checked, add a blue background */
 .radio-container input:checked ~ .radio-checkmark {
-    background-color: var(--red-color);
+    background-color: #ffffff;
+    border:  2px solid var(--red-color);
 }
 
 /* Create the indicator (the dot/circle - hidden when not checked) */
@@ -2514,7 +2540,7 @@ input:checked ~ .checkmark:after {
     width: 8px;
     height: 8px;
     border-radius: 50%;
-    background: white;
+    background: var(--red-color);
 }
 .modal-backdrop
 {
@@ -2870,4 +2896,12 @@ input::placeholder{
 }
 .visa__action{
     left: -119px !important;
+}
+.password__match{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #D84315 !important;
 }
