--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2940,3 +2940,66 @@ input::placeholder{
 .log__out--menu span a{
     color: #000000;
 }
+
+
+.password-strength-group .password-strength-meter {
+    /*width: 100%;*/
+    transition: height 0.3s;
+    display: flex;
+    justify-content: stretch;
+    margin-top: 7px;
+}
+.password-strength-group .password-strength-meter .meter-block {
+    height: 4px;
+    background: #ccc;
+    margin-right: 6px;
+    flex-grow: 1;
+}
+.password-strength-group .password-strength-meter .meter-block:last-child {
+    margin: 0;
+}
+.password-strength-group .password-strength-message {
+    height: 1em;
+    text-align: right;
+    transition: all 0.5s;
+    margin-top: 3px;
+    position: relative;
+    width: 100%;
+}
+.password-strength-group .password-strength-message .message-item {
+    position: absolute;
+    left: 0;
+    opacity: 0;
+    transition: opacity 0.2s;
+
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #757575;
+}
+.password-strength-group[data-strength="1"] .bar__empty:nth-child(-n + 1) {
+    background: #D84315;
+}
+.password-strength-group[data-strength="1"] .message-item:nth-child(1) {
+    opacity: 1;
+}
+.password-strength-group[data-strength="2"] .bar__empty:nth-child(-n + 2) {
+    background: #fd9644;
+}
+.password-strength-group[data-strength="2"] .message-item:nth-child(2) {
+    opacity: 1;
+}
+.password-strength-group[data-strength="3"] .bar__empty:nth-child(-n + 3) {
+    background: #9ea60a;
+}
+.password-strength-group[data-strength="3"] .message-item:nth-child(3) {
+    opacity: 1;
+}
+.password-strength-group[data-strength="4"] .bar__empty:nth-child(-n + 4) {
+    background: #289116;
+}
+.password-strength-group[data-strength="4"] .message-item:nth-child(4) {
+    opacity: 1;
+}
