--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -953,6 +953,7 @@ header{
 }
 .account__left--menu div li svg{
     margin-right: 14px;
+    stroke: var(--red-color);
 }
 .account__left--menu div li:hover{
     color: var(--red-color);
@@ -976,7 +977,7 @@ header{
     align-items: center;
 }
 .right__top--details{
-    border: 2px solid #101623;
+    border: 1px solid #101623;
     border-radius: 4px;
     padding: 4px 17px;
     margin-bottom: 0;
@@ -1656,6 +1657,8 @@ header{
     line-height: 24px;
     color: #FFFFFF !important;
     text-decoration: none;
+    border: none;
+    outline: none;
 }
 .c-border{
     width: 100%;
@@ -1792,6 +1795,7 @@ header{
     border: 1px solid #F16532;
     border-radius: 4px;
     text-align: center;
+    width: 100%;
 
     font-family: 'Qanelas';
     font-style: normal;
@@ -1811,6 +1815,7 @@ header{
     border-radius: 4px;
     border: 1px solid var(--red-color);
     text-align: center;
+    width: 100%;
 
     font-family: 'Qanelas';
     font-style: normal;
@@ -2726,6 +2731,11 @@ input::placeholder{
     width: 380px;
     margin-left: calc(100% - 380px);
 }
+.message__send{
+    border: none;
+    background: none;
+    outline: none;
+}
 .message__send--container{
     margin-top: 24px;
     padding: 12px;
@@ -3002,4 +3012,10 @@ input::placeholder{
 }
 .password-strength-group[data-strength="4"] .message-item:nth-child(4) {
     opacity: 1;
+}
+.enter__payroll svg{
+    stroke: #ffffff;
+}
+.sync__filter--btn{
+    background: #ffffff;
 }
